--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 								
 						<p>I am excited to embark on my software engineering journey and am actively seeking opportunities to further develop my skills and make a meaningful impact in the field. With a strong foundation, a passion for innovation, and a commitment to excellence, I am well-prepared to contribute to the success of any software engineering team.</p>
 						<ul class="about-info mt-4 px-md-0 px-2">
-							<li class="d-flex"><span>Skills:</span> <span>Html,Css,Javascript,Python,Mysql,DBMS</span></li>
+							<li class="d-flex"><span>Skills:</span> <span>Html,Css,Javascript,Python,C,C++,Mysql,DBMS</span></li>
 							<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
 							<li class="d-flex"><span>Language:</span> <span>English,Hindi</span></li>
 							<li class="d-flex"><span>Strenghts:</span> <span>Passionate and Committed,Loyal and Trustworthy,Adaptability</span></li>
