--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2021-2025</span>
     					<h2>Bachelor of Engineering</h2>
-    					<span class="position">Acropoli Institue of Technology And research,Indore</span>
+    					<span class="position">Acropolis Institute of Technology And research,Indore</span>
     					<p class="mt-4">7.84 CGPA </p>
     				</div>
     			</div>
